--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "express": "~4.14.1",
     "hbs": "~4.0.1",
     "morgan": "~1.7.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
